Fix memory corruption in AbstractState JNI bindings. MESOS-2161.

Review: https://reviews.apache.org/r/32152